--- a/finance/templates/finance/add_transaction.html
+++ b/finance/templates/finance/add_transaction.html
@@ -27,6 +27,7 @@
             {{ form.description|add_class:"form-control" }}
         </div>
         <button type="submit" class="btn btn-primary w-100">Сохранить</button>
+        <a href="{% url 'transaction_list' %}" class="btn btn-secondary w-100 mt-2">Отмена</a>
     </form>
 </div>
 {% endblock %}
