Third push finish?

--- a/finance/templates/finance/base.html
+++ b/finance/templates/finance/base.html
@@ -54,6 +54,23 @@
                         <a class="nav-link" href="{% url 'savings_goal_list' %}">Цели сбережений</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <form method="post" action="{% url 'logout' %}" class="d-inline">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-outline-light">Выйти</button>
+                            </form>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Войти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'register' %}" class="btn btn-light">Регистрация</a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
